--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
