--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>maven-shade-plugin</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>13.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -53,7 +58,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.2</version>
         <configuration>
-          <goalPrefix>shade-diff-plugin</goalPrefix>
+          <goalPrefix>shade-diff</goalPrefix>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
