--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,14 @@
 
   <name>shade-diff-plugin Maven Plugin</name>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://maven.apache.org</url>
+  <url>http://github.com/mbautin/maven-shade-diff-plugin</url>
+
+  <scm>
+    <connection>scm:git:git://github.com/mbautin/maven-shade-diff-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:mbautin/maven-shade-diff-plugin.git</developerConnection>
+    <url>http://github.com/mbautin/maven-shade-diff-plugin</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
