--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-shade-plugin</artifactId>
-      <version>3.0.0-csd-1-SNAPSHOT</version>
+      <version>3.0.0-csd-1</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
