--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,6 @@
 
   <name>shade-diff-plugin Maven Plugin</name>
 
-  <url>http://github.com/mbautin/maven-shade-diff-plugin</url>
-
   <scm>
     <connection>scm:git:git://github.com/clearstorydata/maven-shade-diff-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:clearstorydata/maven-shade-diff-plugin.git</developerConnection>
@@ -36,7 +34,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-      <version>3.0.24</version>
+      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -81,6 +79,18 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.3</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.scm</groupId>
+              <artifactId>maven-scm-provider-gitexe</artifactId>
+              <version>1.10-candidate-scm-740-csd</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+
     </plugins>
   </build>
   <profiles>
