--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   
   <groupId>com.clearstorydata.maven</groupId>
   <artifactId>shade-diff-plugin</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>shade-diff-plugin Maven Plugin</name>
@@ -12,7 +12,7 @@
     <connection>scm:git:git://github.com/clearstorydata/maven-shade-diff-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:clearstorydata/maven-shade-diff-plugin.git</developerConnection>
     <url>http://github.com/clearstorydata/maven-shade-diff-plugin</url>
-    <tag>HEAD</tag>
+    <tag>shade-diff-plugin-2.0</tag>
   </scm>
 
   <properties>
